# jira-cli

./: .env.example  .gitignore  README.md  pyproject.toml
src/jira_cli/: __init__.py  cli.py
src/jira_cli/commands/: __init__.py  create_issue.py  get_issue.py  jql.py  update_issue.py
src/jira_cli/server/: __init__.py  client.py
